--- a/slideshow.service
+++ b/slideshow.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Samsung Frame TV Slideshow
-After=network-online.target
+After=network-online.target local-fs.target
 Wants=network-online.target
 RequiresMountsFor=/media/adam/DRPHOTOUSB/Gallery
 
@@ -8,6 +8,7 @@ RequiresMountsFor=/media/adam/DRPHOTOUSB/Gallery
 Type=simple
 User=adam
 WorkingDirectory=/home/adam/samsung-tv-ws-api/example
+ExecStartPre=/bin/sleep 10
 ExecStart=/home/adam/samsung-tv-ws-api/samsungvenv/bin/python3 /home/adam/samsung-tv-ws-api/example/async_art_update_from_directory.py 192.168.5.81 -D -f /media/adam/DRPHOTOUSB/Gallery -u 10 -m flexible_black -c 3600
 Environment="PYTHONUNBUFFERED=1"
 
