Change to restart=always for better connection recovery

--- a/systemd/slideshow.service
+++ b/systemd/slideshow.service
@@ -10,7 +10,7 @@ User=adam
 WorkingDirectory=/home/adam/samsung-tv-ws-api/example
 ExecStart=/home/adam/samsung-tv-ws-api/samsungvenv/bin/python3 /home/adam/samsung-tv-ws-api/example/async_art_update_from_directory.py 192.168.5.81 -D -f /media/adam/DRPHOTOUSB/Gallery -u 10 -m flexible_black -c 60
 Environment="PYTHONUNBUFFERED=1"
-Restart=on-failure
+Restart=always
 RestartSec=5
 StartLimitIntervalSec=300
 StartLimitBurst=30
